<?xml version="1.0"?>
<package format="2">
  <name>libcreate</name>
  <version>1.1.0</version>
  <description>C++ driver for iRobot's Create 1 and 2</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/libcreate</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>boost</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
  </export>
</package>
